--- a/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb
+++ b/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Dataset Titanic on the Feature Store\"\n",
+    "title: \"Titanic Dataset with the Feature Store\"\n",
     "date: 2021-02-24\n",
     "type: technical_note\n",
     "draft: false\n",
@@ -68,8 +68,8 @@
    "source": [
     "import tensorflow as tf\n",
     "from hops import hdfs\n",
-    "from hops import featurestore\n",
-    "from pyspark.sql import functions as F"
+    "from pyspark.sql import functions as F\n",
+    "import hsfs"
    ]
   },
   {
@@ -186,6 +186,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection = hsfs.connection()\n",
+    "fs = connection.get_feature_store()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -201,14 +211,12 @@
    ],
    "source": [
     "# create a feature group from the training data DataFrame\n",
-    "\n",
-    "featurestore.create_featuregroup(clean_train_df,\n",
-    "                                 'titanic_training_all_features',\n",
-    "                                 description='titanic training dataset with clean features',\n",
-    "                                 descriptive_statistics=True,\n",
-    "                                 feature_correlation=False,\n",
-    "                                 feature_histograms=False,\n",
-    "                                 cluster_analysis=False)"
+    "titantic_fg = fs.create_feature_group(name=\"titanic_training_all_features\",\n",
+    "                                       version=1,\n",
+    "                                       description=\"titanic training dataset with clean features\",\n",
+    "                                       time_travel_format=None,\n",
+    "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})\n",
+    "titantic_fg.save(clean_train_df)"
    ]
   },
   {
@@ -235,8 +243,7 @@
    ],
    "source": [
     "# retrieve dataframe from feature store\n",
-    "\n",
-    "titanic_df = featurestore.get_featuregroup('titanic_training_all_features')"
+    "titanic_df = fs.get_feature_group('titanic_training_all_features',version=1)"
    ]
   },
   {
@@ -302,13 +309,11 @@
     }
    ],
    "source": [
-    "featurestore.create_training_dataset(titanic_df,\n",
-    "                                    \"titanic_train_dataset\",\n",
-    "                                    data_format='tfrecords',\n",
-    "                                    descriptive_statistics=False,\n",
-    "                                    feature_correlation=False,\n",
-    "                                    feature_histograms=False,\n",
-    "                                    cluster_analysis=False)"
+    "td = fs.create_training_dataset(name=\"titanic_train_dataset\",\n",
+    "                               description=\"Dataset to train Titantic survival model\",\n",
+    "                               data_format=\"tfrecord\",\n",
+    "                               version=1)\n",
+    "td.save(titanic_df)"
    ]
   },
   {
