--- a/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb
+++ b/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb
@@ -48,7 +48,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>5</td><td>application_1568986312014_0006</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1568986312014_0006/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1568986312014_0006_01_000001/maggy_ablation__meb10000\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>0</td><td>application_1614293057610_0001</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1614293057610_0001/\">Link</a></td><td><a target=\"_blank\" href=\"http://jimeuwest4-worker-1.internal.cloudapp.net:8042/node/containerlogs/container_e02_1614293057610_0001_01_000001/test__meb10179\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -81,13 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read the training data csv into a Spark DataFrame\n",
     "\n",
-    "training_csv_path = hdfs.abs_path('') + 'Resources/' + 'titanic-train.csv'\n",
+    "training_csv_path = hdfs.project_path() + 'Resources/' + 'train.csv'\n",
     "raw_df = spark.read.csv(training_csv_path, header=True)"
    ]
   },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -186,9 +186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected. Call `.close()` to terminate connection gracefully."
+     ]
+    }
+   ],
    "source": [
     "connection = hsfs.connection()\n",
     "fs = connection.get_feature_store()"
@@ -196,16 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "computing descriptive statistics for : titanic_training_all_features, version: 1\n",
-      "Running sql: use maggy_ablation_featurestore\n",
-      "Feature group created successfully"
+      "<hsfs.feature_group.FeatureGroup object at 0x7f63e6e25b50>"
      ]
     }
    ],
@@ -228,19 +234,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running sql: use maggy_ablation_featurestore\n",
-      "SQL string for the query created successfully\n",
-      "Running sql: SELECT * FROM titanic_training_all_features_1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# retrieve dataframe from feature store\n",
     "titanic_df = fs.get_feature_group('titanic_training_all_features',version=1)"
@@ -248,43 +244,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+------+---+----+---+-----+-----+\n",
-      "|survived|pclass|sex|fare|age|sibsp|parch|\n",
-      "+--------+------+---+----+---+-----+-----+\n",
-      "|       0|     3|  0|   7| 22|    1|    0|\n",
-      "|       1|     1|  1|  71| 38|    1|    0|\n",
-      "|       1|     3|  1|   7| 26|    0|    0|\n",
-      "|       1|     1|  1|  53| 35|    1|    0|\n",
-      "|       0|     3|  0|   8| 35|    0|    0|\n",
-      "|       0|     3|  0|   8| 30|    0|    0|\n",
-      "|       0|     1|  0|  51| 54|    0|    0|\n",
-      "|       0|     3|  0|  21|  2|    3|    1|\n",
-      "|       1|     3|  1|  11| 27|    0|    2|\n",
-      "|       1|     2|  1|  30| 14|    1|    0|\n",
-      "|       1|     3|  1|  16|  4|    1|    1|\n",
-      "|       1|     1|  1|  26| 58|    0|    0|\n",
-      "|       0|     3|  0|   8| 20|    0|    0|\n",
-      "|       0|     3|  0|  31| 39|    1|    5|\n",
-      "|       0|     3|  1|   7| 14|    0|    0|\n",
-      "|       1|     2|  1|  16| 55|    0|    0|\n",
-      "|       0|     3|  0|  29|  2|    4|    1|\n",
-      "|       1|     2|  0|  13| 30|    0|    0|\n",
-      "|       0|     3|  1|  18| 31|    1|    0|\n",
-      "|       1|     3|  1|   7| 30|    0|    0|\n",
-      "+--------+------+---+----+---+-----+-----+\n",
-      "only showing top 20 rows"
+      "+-----+---+----+--------+------+---+-----+\n",
+      "|sibsp|sex|fare|survived|pclass|age|parch|\n",
+      "+-----+---+----+--------+------+---+-----+\n",
+      "|    1|  0|   7|       0|     3| 22|    0|\n",
+      "|    1|  1|  71|       1|     1| 38|    0|\n",
+      "|    0|  1|   7|       1|     3| 26|    0|\n",
+      "|    1|  1|  53|       1|     1| 35|    0|\n",
+      "+-----+---+----+--------+------+---+-----+\n",
+      "only showing top 4 rows"
      ]
     }
    ],
    "source": [
-    "titanic_df.show()"
+    "titanic_df.show(4)"
    ]
   },
   {
@@ -296,15 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "write feature frame, write_mode: overwrite\n",
-      "Training Dataset created successfully"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7f63e6de3b90>"
      ]
     }
    ],
@@ -313,7 +292,7 @@
     "                               description=\"Dataset to train Titantic survival model\",\n",
     "                               data_format=\"tfrecord\",\n",
     "                               version=1)\n",
-    "td.save(titanic_df)"
+    "td.save(titanic_df.read())"
    ]
   },
   {
@@ -327,19 +306,19 @@
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
