--- a/notebooks/featurestore/hsfs/time_travel/time_travel_scala.ipynb
+++ b/notebooks/featurestore/hsfs/time_travel/time_travel_scala.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Hsfs - Time-Travel with Scala/Spark\"\n",
+    "title: \"Time-Travel with Spark\"\n",
     "date: 2021-02-24\n",
     "type: technical_note\n",
     "draft: false\n",
