fix sf examples

--- a/notebooks/featurestore/hsfs/snowflake/scala.ipynb
+++ b/notebooks/featurestore/hsfs/snowflake/scala.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "source": [
+    "## Snowflake (On-Demand) Feature Group \n",
+    "This tutorial notebook will show how you can define an external feature group for a table in Snowflake.\n",
+    "\n",
+    "In this notebook we assume that you already have snowflake account and did the getting started with snowflake tutorial.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "virtual-acrobat",
