update snowflake examples with hsfs

--- a/notebooks/featurestore/snowflake/pysparkChurnCreateFeaturegroups.ipynb
+++ b/notebooks/featurestore/snowflake/pysparkChurnCreateFeaturegroups.ipynb
@@ -13,7 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hops import featurestore\n",
     "from pyspark.sql.types import DoubleType\n",
     "from pyspark.ml import Pipeline\n",
     "from pyspark.ml.feature import OneHotEncoderEstimator, StringIndexer, VectorAssembler, StandardScaler\n",
@@ -21,19 +20,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hsfs\n",
+    "connection = hsfs.connection()\n",
+    "# get a reference to the feature store, you can access also shared feature stores by providing the feature store name\n",
+    "fs = connection.get_feature_store()\n",
+    "connector = fs.get_storage_connector(\"snowflake_spark_connector\", \"JDBC\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 1.1 Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db_pass = featurestore.get_storage_connector(\"snowflake_spark_connector\",featurestore=featurestore.project_featurestore()).arguments"
    ]
   },
   {
@@ -46,7 +49,7 @@
     "format(\"net.snowflake.spark.snowflake\").\n",
     "option(\"sfURL\", \"https://ra96958.eu-central-1.snowflakecomputing.com\").\n",
     "option(\"sfUser\", \"HOPSWORKS\").\n",
-    "option(\"sfPassword\", db_pass).\n",
+    "option(\"sfPassword\", connector.arguments).\n",
     "option(\"sfDatabase\", \"ML_WORKSHOP\").    \n",
     "option(\"sfSchema\", \"PUBLIC\").\n",
     "option(\"sfWarehouse\", \"HOPSWORKS_WH\").\n",
@@ -151,45 +154,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "computing descriptive statistics for : telcom_churn_features, version: 1\n",
-      "computing feature correlation for: telcom_churn_features, version: 1\n",
-      "computing feature histograms for: telcom_churn_features, version: 1\n",
-      "computing cluster analysis for: telcom_churn_features, version: 1\n",
-      "Registering feature metadata...\n",
-      "Registering feature metadata... [COMPLETE]\n",
-      "Writing feature data to offline feature group (Hive)...\n",
-      "Running sql: use demo_featurestore_davit000_featurestore against offline feature store\n",
-      "Writing feature data to offline feature group (Hive)... [COMPLETE]\n",
-      "Feature group created successfully"
-     ]
-    }
-   ],
-   "source": [
-    "featurestore.create_featuregroup(\n",
-    "    telcom_churn_features,\n",
-    "    \"telcom_featuregroup\",\n",
-    "    description=\"Telecom churn prediction feature group\", \n",
-    "    online=True,\n",
-    "    descriptive_statistics=True,\n",
-    "    feature_correlation=True,\n",
-    "    feature_histograms=True,\n",
-    "    cluster_analysis=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "val telcoFg = (fs.createFeatureGroup()\n",
+    "                 .name(\"telco_customer_features\")\n",
+    "                 .version(1)\n",
+    "                 .description(\"Telecom customer features\")\n",
+    "                 .onlineEnabled(true)\n",
+    "                 .timeTravelFormat(TimeTravelFormat.HUDI)\n",
+    "                 .primaryKeys(Seq(\"customer_id\"))\n",
+    "                 .statisticsEnabled(true)\n",
+    "                 .build())\n",
+    "\n",
+    "telcoFg.save(telcom_churn_features)"
+   ]
   }
  ],
  "metadata": {
