--- a/notebooks/featurestore/snowflake/pythonChurnCreateFeaturegroups.ipynb
+++ b/notebooks/featurestore/snowflake/pythonChurnCreateFeaturegroups.ipynb
@@ -62,7 +62,6 @@
    ],
    "source": [
     "from hops import pandas_helper as pandas\n",
-    "from hops import featurestore\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
@@ -77,7 +76,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_pass = featurestore.get_storage_connector(\"snowflake_spark_connector\",featurestore=featurestore.project_featurestore()).arguments"
+    "import hsfs\n",
+    "connection = hsfs.connection()\n",
+    "# get a reference to the feature store, you can access also shared feature stores by providing the feature store name\n",
+    "fs = connection.get_feature_store()\n",
+    "connector = fs.get_storage_connector(\"snowflake_spark_connector\", \"JDBC\")"
    ]
   },
   {
@@ -111,7 +114,7 @@
    "source": [
     "ctx = snowflake.connector.connect(\n",
     "  user='HOPSWORKS',\n",
-    "  password=db_pass,\n",
+    "  password=connector.arguments,\n",
     "  account='ra96958.eu-central-1',\n",
     "  warehouse='HOPSWORKS_WH',\n",
     "  database='ML_WORKSHOP',\n",
@@ -299,60 +302,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "computing descriptive statistics for : telcom_featuregroup, version: 1\n",
-      "computing feature correlation for: telcom_featuregroup, version: 1\n",
-      "computing feature histograms for: telcom_featuregroup, version: 1\n",
-      "computing cluster analysis for: telcom_featuregroup, version: 1\n",
-      "Registering feature metadata...\n",
-      "Registering feature metadata... [COMPLETE]\n",
-      "Writing feature data to offline feature group (Hive)...\n",
-      "Running sql: use redshift_featurestore against offline feature store\n",
-      "Writing feature data to offline feature group (Hive)... [COMPLETE]\n",
-      "Writing feature data to online feature group (MySQL)...\n",
-      "Writing feature data to online feature group (MySQL)... [COMPLETE]\n",
-      "Feature group created successfully"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from hops import featurestore\n",
+    "val telcoFg = (fs.createFeatureGroup()\n",
+    "                 .name(\"telco_customer_features\")\n",
+    "                 .version(2)\n",
+    "                 .description(\"Telecom customer features\")\n",
+    "                 .onlineEnabled(true)\n",
+    "                 .timeTravelFormat(TimeTravelFormat.HUDI)\n",
+    "                 .primaryKeys(Seq(\"customer_id\"))\n",
+    "                 .statisticsEnabled(true)\n",
+    "                 .build())\n",
     "\n",
-    "featurestore.create_featuregroup(\n",
-    "    telcom,\n",
-    "    \"telcom_featuregroup\",\n",
-    "    description=\"Telecom churn prediction feature group\", \n",
-    "    online=True,\n",
-    "    descriptive_statistics=True,\n",
-    "    feature_correlation=True,\n",
-    "    feature_histograms=True,\n",
-    "    cluster_analysis=True\n",
-    ")"
+    "telcoFg.save(telcom_churn_features)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "featurestore.set_featuregroup_tag(\"telcom_featuregroup\", \"privacy_level\", \"pii\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
