fix redshift image

--- a/notebooks/featurestore/aws/redshift/Redshift_pyspark.ipynb
+++ b/notebooks/featurestore/aws/redshift/Redshift_pyspark.ipynb
@@ -64,7 +64,7 @@
     "The first step to be able to ingest Redshift data into the feature store is to configure a storage connector.The Redshift connector requires you to specify the following properties. Most of them are available in the properties area of your cluster in the Redshift UI.\n",
     "\n",
     "\n",
-    "<img src='images/connector_ui.png' alt=\"Redshift Connector UI\" style=\"margin: auto; height: 600px; width:550px;\"/>\n",
+    "<img src="images/connector_ui.png" alt=\"Redshift Connector UI\" style=\"margin: auto; height: 600px; width:550px;\"/>\n",
     "\n",
     "- Cluster identifier: The name of the cluster\n",
     "\n",
