--- a/notebooks/featurestore/hsfs/external_table/external-table-delta-lake.ipynb
+++ b/notebooks/featurestore/hsfs/external_table/external-table-delta-lake.ipynb
@@ -42,12 +42,13 @@
    "source": [
     "delta_conn = fs.get_storage_connector(\"telco_delta\")\n",
     "\n",
+    "# External tables are called \"on-demand feature groups\"\n",
     "telco_on_dmd = fs.create_on_demand_feature_group(name=\"telco_s3_delta\",\n",
     "                                                version=1,\n",
     "                                                query=\"select * from telco\",\n",
     "                                                description=\"On-demand FG with telecom data\",\n",
     "                                                storage_connector=delta_conn,\n",
-    "                                                statistics_config=True)\n",
+    "                                                statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})\n",
     "telco_on_dmd.save()"
    ]
   }
