--- a/notebooks/featurestore/hsfs/snowflake/getting-started.ipynb
+++ b/notebooks/featurestore/hsfs/snowflake/getting-started.ipynb
@@ -53,8 +53,7 @@
     " \"database\": \"ML_WORKSHOP\",\n",
     " \"schema\": \"PUBLIC\",\n",
     " \"warehouse\": \"COMPUTE_WH\",\n",
-    " \"role\": \"HOPSWORKS_ROLE\",\n",
-    " \"table\": \"CUSTOMER_CHURN\"\n",
+    " \"role\": \"HOPSWORKS_ROLE\"\n",
     "}\n",
     "```\n",
     "\n",
