--- a/notebooks/featurestore/hsfs/snowflake/getting-started.ipynb
+++ b/notebooks/featurestore/hsfs/snowflake/getting-started.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "source": [
-    "Snowflake user## Create Snowflake connector in Hopsworks <a name=\"access_snowflake\"></a>\n",
+    "## Create Snowflake connector in Hopsworks <a name=\"access_snowflake\"></a>\n",
     "\n",
     "Create a snowflack storage connector by posting to the featurestore id the connector is going to used from.\n",
     "\n",
@@ -105,7 +105,7 @@
    "source": [
     "## Python\n",
     "\n",
-    "Additional options are not supported in python. If you have additional options in your connector you need to add then to the \"sfConnectorOptions\" with \n",
+    "Additional options are not supported in python. If you have additional options in your connector you need to add them to the \"sfConnectorOptions\" with \n",
     "the correct key name.\n"
    ],
    "cell_type": "markdown",
