--- a/notebooks/featurestore/hsfs/snowflake/getting-started.ipynb
+++ b/notebooks/featurestore/hsfs/snowflake/getting-started.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## Create Snowflake connector in Hopsworks <a name=\"access_snowflake\"></a>\n",
     "\n",
-    "Create a snowflack storage connector by posting to the featurestore id the connector is going to used from.\n",
+    "Create a snowflake storage connector in a featurestore.\n",
     "\n",
     "```\n",
     "POST /hopsworks-api/api/project/<project id>/featurestores/<feature storre id>/storageconnectors HTTP/1.1\n",
