Add coalesced training data example

--- a/notebooks/featurestore/aws/s3/S3-FeatureStore.ipynb
+++ b/notebooks/featurestore/aws/s3/S3-FeatureStore.ipynb
@@ -42,12 +42,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cluster-wide IAM Role \n",
+    "\n",
+    "On hopsworks.ai, when you are configuring your Hopsworks cluster, you can select an Instance profile for Hopsworks. All jobs run on Hopsworks can use the IAM Role for this Instance profile (the Instance profile is an IAM Role for this instance).\n",
+    "\n",
+    "<img src=\"images/iam-profile.png\" alt=\"Cluster-wide IAM Profile\" style=\"margin: auto; height: 450px; width:550px;\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Federated IAM Roles\n",
+    "\n",
+    "You can restrict a IAM Roles to be only usable within a specified project. Within the specified project, you can furuther retrict which *role* a user must have to be able to use the IAM Role - e.g., only *Data Owners* in the project called *Noc-list* can use this assume IAM role. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hops import featurestore"
+    "import hsfs\n",
+    "connection = hsfs.connection()\n",
+    "fs = connection.get_feature_store()"
    ]
   },
   {
@@ -87,11 +109,25 @@
     }
    ],
    "source": [
-    "featurestore.import_featuregroup_s3(\"house-bucket\", \"fg\", \"sacramento_houses_raw\", \n",
-    "                                    description=\"House sale transactions in Sacramento\",\n",
-    "                                    featurestore=featurestore.project_featurestore(),\n",
-    "                                    featuregroup_version=1,\n",
-    "                                    data_format=\"csv\")"
+    "sc = fs.get_storage_connector(\"telco_delta\")\n",
+    "\n",
+    "df = spark.read.csv(sc.bucket, header=True, mode=\"DROPMALFORMED\") # , schema=schema, ,sep=\"|\"\n",
+    "\n",
+    "telco_fg = fs.create_feature_group(name=\"telco_fg\",\n",
+    "                                   version=1,\n",
+    "                                   description=\"On-demand FG with telecom data\",\n",
+    "                                   statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})\n",
+    "telco_fg.save(df)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = spark.read_csv(\"s3a://sacramento_houses_raw/sacramento_houses_raw.csv\")"
    ]
   },
   {
