--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Feature Selection and Training Dataset Creation\"\n",
+    "title: \"Create Coalesced Training Data - csv files \"\n",
     "date: 2021-02-24\n",
     "type: technical_note\n",
     "draft: false\n",
