remove download driver

--- a/notebooks/featurestore/hsfs/snowflake/getting-started.ipynb
+++ b/notebooks/featurestore/hsfs/snowflake/getting-started.ipynb
@@ -88,15 +88,8 @@
   },
   {
    "source": [
-    "# Using the connector\n",
-    "\n",
-    "Before using the connector you need to download a database driver [snowflake jdbc driver](https://repo1.maven.org/maven2/net/snowflake/snowflake-jdbc/) \n",
-    "and upload the driver files to the “Resources” dataset in your project.\n",
-    "\n",
-    "To use snowflake as the data source in spark you also need to download spark snowflake connector [download spark-snowflake] \n",
-    "(https://docs.snowflake.com/en/user-guide/spark-connector-install.html) and upload the jar file to the “Resources” dataset in your project.\n",
-    "\n",
-    "When you start a Jupyter notebook, you need to add the driver and the connecot jars so it can be accessed in programs."
+    "## Using the connector\n",
+    "After createing the connector you can use it with your python, scala or pyspark programs.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
