--- a/notebooks/featurestore/hsfs/snowflake/getting-started.ipynb
+++ b/notebooks/featurestore/hsfs/snowflake/getting-started.ipynb
@@ -89,7 +89,7 @@
   {
    "source": [
     "## Using the connector\n",
-    "After createing the connector you can use it with your python, scala or pyspark programs.\n"
+    "After creating the connector you can use it with your python, scala or pyspark programs.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
