[HOPSWORKS-2185] Update notebook/ml/EndToEnd notebooks

--- a/notebooks/ml/End_To_End_Pipeline/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
+++ b/notebooks/ml/End_To_End_Pipeline/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
@@ -583,8 +583,10 @@
     }
    ],
    "source": [
+    "# Create serving\n",
+    "serving_name = MODEL_NAME\n",
     "script_path = \"Models/\" + MODEL_NAME + \"/\" + str(best_model['version']) + \"/iris_flower_classifier.py\"\n",
-    "serving.create_or_update(script_path, MODEL_NAME, model_version=best_model['version'], serving_type=\"SKLEARN\")"
+    "serving.create_or_update(serving_name, script_path, model_version=best_model['version'], model_server=\"FLASK\")"
    ]
   },
   {
