--- a/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb
+++ b/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb
@@ -1,18 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "title: \"Titanic Dataset with the Feature Store\"\n",
-    "date: 2021-02-24\n",
-    "type: technical_note\n",
-    "draft: false\n",
-    "---"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,7 +36,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>0</td><td>application_1614293057610_0001</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1614293057610_0001/\">Link</a></td><td><a target=\"_blank\" href=\"http://jimeuwest4-worker-1.internal.cloudapp.net:8042/node/containerlogs/container_e02_1614293057610_0001_01_000001/test__meb10179\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>22</td><td>application_1614082217334_0028</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1614082217334_0028/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_1614082217334_0028_01_000001/test2__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -61,15 +49,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SparkSession available as 'spark'.\n"
+      "SparkSession available as 'spark'.\n",
+      "Connected. Call `.close()` to terminate connection gracefully."
      ]
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
     "from hops import hdfs\n",
     "from pyspark.sql import functions as F\n",
-    "import hsfs"
+    "import hsfs\n",
+    "\n",
+    "# Create a connection\n",
+    "connection = hsfs.connection()\n",
+    "# Get the feature store handle for the project's feature store\n",
+    "fs = connection.get_feature_store()"
    ]
   },
   {
@@ -81,14 +74,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read the training data csv into a Spark DataFrame\n",
-    "\n",
-    "training_csv_path = hdfs.project_path() + 'Resources/' + 'train.csv'\n",
-    "raw_df = spark.read.csv(training_csv_path, header=True)"
+    "training_csv = spark.read\\\n",
+    "             .option(\"inferSchema\", \"true\")\\\n",
+    "             .option(\"header\", \"true\")\\\n",
+    "             .format(\"csv\")\\\n",
+    "             .load(\"hdfs:///Projects/{}/Resources/titanic-train.csv\".format(hdfs.project_name()))"
    ]
   },
   {
@@ -100,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +104,7 @@
     "#     3 - changing sex to 0 or 1\n",
     "#     4 - casting all columns to int\n",
     "\n",
-    "clean_train_df = raw_df.select('survived', 'pclass', 'sex', 'fare', 'age', 'sibsp', 'parch') \\\n",
+    "clean_train_df = training_csv.select('survived', 'pclass', 'sex', 'fare', 'age', 'sibsp', 'parch') \\\n",
     "                    .fillna({'age': 30}) \\\n",
     "                    .withColumn('sex',\n",
     "                        F.when(F.col('sex')=='male', 0)\n",
@@ -133,7 +127,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see how our \"clean\" dataframe looks like now:"
+    "We now have to create a metadata object for the feature group, in order to materialize it later:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create the metadata object\n",
+    "\n",
+    "titanic_all_fg_meta = fs.create_feature_group(name=\"titanic_all_features\",\n",
+    "                                       version=1,\n",
+    "                                       description=\"Titanic training features\",\n",
+    "                                       time_travel_format=None,\n",
+    "                                       statistics_config={\"enabled\": False, \"histograms\": False, \"correlations\": False})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the metadata object, the next step would be to create a *feature group*, and to register it with the Project's Feature Store:"
    ]
   },
   {
@@ -145,126 +161,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+------+---+----+---+-----+-----+\n",
-      "|survived|pclass|sex|fare|age|sibsp|parch|\n",
-      "+--------+------+---+----+---+-----+-----+\n",
-      "|       0|     3|  0|   7| 22|    1|    0|\n",
-      "|       1|     1|  1|  71| 38|    1|    0|\n",
-      "|       1|     3|  1|   7| 26|    0|    0|\n",
-      "|       1|     1|  1|  53| 35|    1|    0|\n",
-      "|       0|     3|  0|   8| 35|    0|    0|\n",
-      "|       0|     3|  0|   8| 30|    0|    0|\n",
-      "|       0|     1|  0|  51| 54|    0|    0|\n",
-      "|       0|     3|  0|  21|  2|    3|    1|\n",
-      "|       1|     3|  1|  11| 27|    0|    2|\n",
-      "|       1|     2|  1|  30| 14|    1|    0|\n",
-      "|       1|     3|  1|  16|  4|    1|    1|\n",
-      "|       1|     1|  1|  26| 58|    0|    0|\n",
-      "|       0|     3|  0|   8| 20|    0|    0|\n",
-      "|       0|     3|  0|  31| 39|    1|    5|\n",
-      "|       0|     3|  1|   7| 14|    0|    0|\n",
-      "|       1|     2|  1|  16| 55|    0|    0|\n",
-      "|       0|     3|  0|  29|  2|    4|    1|\n",
-      "|       1|     2|  0|  13| 30|    0|    0|\n",
-      "|       0|     3|  1|  18| 31|    1|    0|\n",
-      "|       1|     3|  1|   7| 30|    0|    0|\n",
-      "+--------+------+---+----+---+-----+-----+\n",
-      "only showing top 20 rows"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fc17f94e110>"
      ]
     }
    ],
    "source": [
-    "clean_train_df.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The next step would be to create a *feature group* from our clean dataframe, so as to register it with the Project's Feature Store:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected. Call `.close()` to terminate connection gracefully."
-     ]
-    }
-   ],
-   "source": [
-    "connection = hsfs.connection()\n",
-    "fs = connection.get_feature_store()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f63e6e25b50>"
-     ]
-    }
-   ],
-   "source": [
-    "# create a feature group from the training data DataFrame\n",
-    "titantic_fg = fs.create_feature_group(name=\"titanic_training_all_features\",\n",
-    "                                       version=1,\n",
-    "                                       description=\"titanic training dataset with clean features\",\n",
-    "                                       time_travel_format=None,\n",
-    "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})\n",
-    "titantic_fg.save(clean_train_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we can forget about our previous \"clean\" dataframe that we read directly from the CSV file, and retrieve the training dataframe from the feature store:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# retrieve dataframe from feature store\n",
-    "titanic_df = fs.get_feature_group('titanic_training_all_features',version=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----+---+----+--------+------+---+-----+\n",
-      "|sibsp|sex|fare|survived|pclass|age|parch|\n",
-      "+-----+---+----+--------+------+---+-----+\n",
-      "|    1|  0|   7|       0|     3| 22|    0|\n",
-      "|    1|  1|  71|       1|     1| 38|    0|\n",
-      "|    0|  1|   7|       1|     3| 26|    0|\n",
-      "|    1|  1|  53|       1|     1| 35|    0|\n",
-      "+-----+---+----+--------+------+---+-----+\n",
-      "only showing top 4 rows"
-     ]
-    }
-   ],
-   "source": [
-    "titanic_df.show(4)"
+    "titanic_all_fg_meta.save(clean_train_df)"
    ]
   },
   {
@@ -276,23 +178,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.training_dataset.TrainingDataset object at 0x7f63e6de3b90>"
+      "<hsfs.training_dataset.TrainingDataset object at 0x7fc17f4c7f10>"
      ]
     }
    ],
    "source": [
+    "# create training dataset\n",
+    "\n",
+    "titanic_all_fg = fs.get_feature_group('titanic_all_features', version=1)\n",
+    "\n",
+    "query = titanic_all_fg.select_all()\n",
+    "\n",
     "td = fs.create_training_dataset(name=\"titanic_train_dataset\",\n",
-    "                               description=\"Dataset to train Titantic survival model\",\n",
+    "                               description=\"Titanic training dataset with all features\",\n",
     "                               data_format=\"tfrecord\",\n",
     "                               version=1)\n",
-    "td.save(titanic_df.read())"
+    "\n",
+    "td.save(query)"
    ]
   },
   {
