remove old snowflake
remove old snowflake

--- a/notebooks/featurestore/petastorm/PetastormMNIST_Tensorflow.ipynb
+++ b/notebooks/featurestore/petastorm/PetastormMNIST_Tensorflow.ipynb
@@ -515,7 +515,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
       "1/1 [==============================] - 1s 768ms/step\n",
       "Test loss: 0.0319652184844017\n",
       "Test accuracy: 0.9900000095367432"
@@ -539,19 +538,19 @@
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
