kernel fix pyspark
kernel fix pyspark

--- a/notebooks/ml/Inference/Batch_Inference_Imagenet_Spark.ipynb
+++ b/notebooks/ml/Inference/Batch_Inference_Imagenet_Spark.ipynb
@@ -37,9 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The code failed because of a fatal error:\n",
+      "\t[Errno 2] No such file or directory: 'token.jwt'.\n",
+      "\n",
+      "Some things to try:\n",
+      "a) Make sure Spark has enough available resources for Jupyter to create a Spark context.\n",
+      "b) Contact your Jupyter administrator to make sure the Spark magics library is configured correctly.\n",
+      "c) Restart the kernel.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.applications import ResNet50\n",
@@ -508,19 +522,19 @@
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
