--- a/notebooks/ml/Plotting/ipyleaflet.ipynb
+++ b/notebooks/ml/Plotting/ipyleaflet.ipynb
@@ -254,7 +254,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.9"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
