--- a/notebooks/spark/Elasticsearch-scala.ipynb
+++ b/notebooks/spark/Elasticsearch-scala.ipynb
@@ -140,7 +140,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Spark",
-   "language": "",
+   "language": "scala",
    "name": "sparkkernel"
   },
   "language_info": {
