--- a/notebooks/spark/KafkaSparkScala_ConsumeDemoProducer.ipynb
+++ b/notebooks/spark/KafkaSparkScala_ConsumeDemoProducer.ipynb
@@ -279,7 +279,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Spark",
-   "language": "",
+   "language": "scala",
    "name": "sparkkernel"
   },
   "language_info": {
@@ -290,5 +290,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
