fix colab notebook
fix colab notebook

--- a/notebooks/featurestore/gcp/colab.ipynb
+++ b/notebooks/featurestore/gcp/colab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "radical-devon",
+   "id": "satisfactory-lucas",
    "metadata": {},
    "source": [
     "---\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "painted-endorsement",
+   "id": "atomic-internship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "seventh-pontiac",
+   "id": "corporate-lease",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "portable-house",
+   "id": "posted-dakota",
    "metadata": {},
    "source": [
     "## Show the first 5 rows in a Feature Group\n",
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "civilian-saint",
+   "id": "allied-investor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flexible-entrance",
+   "id": "isolated-outside",
    "metadata": {},
    "source": [
     "## Ingest some features into the Feature Store as a Feature Group\n",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "entitled-kuwait",
+   "id": "architectural-court",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sunrise-humor",
+   "id": "tutorial-brazilian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pleased-italic",
+   "id": "regulation-disco",
    "metadata": {},
    "source": [
     "## Feature Data Validation\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "graduate-welsh",
+   "id": "failing-postcard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,22 +142,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extensive-arkansas",
+   "id": "smoking-monitoring",
    "metadata": {},
    "outputs": [],
    "source": [
     "expectation_countries = fs.create_expectation(\"countries\",\n",
     "                                          description=\"min and max number of countries\",\n",
     "                                          features=[\"country\"], \n",
-    "                                          rules=[Rule(name=\"HAS_MIN\", level=\"ERROR\", min=10), \n",
-    "                                                 Rule(name=\"HAS_MAX\", level=\"ERROR\", max=195)])\n",
+    "                                          rules=[Rule(name=\"HAS_NUMBER_OF_DISTINCT_VALUES\", level=\"ERROR\", min=1), \n",
+    "                                                 Rule(name=\"HAS_NUMBER_OF_DISTINCT_VALUES\", level=\"ERROR\", max=195)])\n",
     "expectation_countries.save()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adapted-worcester",
+   "id": "built-clear",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,21 +167,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exceptional-journalist",
+   "id": "painful-qualification",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a Pandas Dataframe and ingest its features into a feature group that you create here.  \n",
     "import pandas as pd \n",
+    "columns = ['first_name', 'last_name', 'country']\n",
     "data = [['tom', 'johnson', 'UK'], ['penelope', 'charles', 'UK'], ['harry', 'windsor', \"USA\"]]   \n",
-    "df = pd.DataFrame(data, columns = ['first_name', 'last_name', 'country']) \n",
+    "df = pd.DataFrame(data, columns=columns) \n",
     "name_country_fg.insert(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "third-flour",
+   "id": "chubby-program",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +193,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "referenced-pressure",
+   "id": "norman-slovak",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fg_validations = name_country_fg.get_validations()\n",
+    "[print(validation.to_dict()) for validation in fg_validations]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "pacific-replacement",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "import random\n",
+    "def id_generator(size=1500, chars=string.ascii_uppercase + string.digits):\n",
+    "    return ''.join(random.choice(chars) for _ in range(size))\n",
+    "\n",
+    "num_rows = 600\n",
+    "\n",
+    "data = np.array([id_generator() for i in range(num_rows)]).reshape(200,3)\n",
+    "df2 = pd.DataFrame(data, columns=columns)\n",
+    "name_country_fg.insert(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "surprised-islam",
    "metadata": {},
    "outputs": [],
    "source": [
