--- a/notebooks/hive/PyHive.ipynb
+++ b/notebooks/hive/PyHive.ipynb
@@ -29,7 +29,8 @@
     "Create a dataset with a name of your choosing, for example `RawData` and upload the CSV file. Make sure the dataset is empty, you will need to delete the auto-generated README.md\n",
     "\n",
     "## Warning\n",
-    "This notebook will download three files, including a private key need\n",
+    "\n",
+    "This notebook will download three files, including a private key, that provide write access to the Hive database. Do not check these files into Git (or any other source code control system). If you have `auto-push on shutdown` enabled, it will add these files to git.\n",
     "\n",
     "First we need to setup the IPython magic and the connection information by running the following cell:"
    ]
