--- a/notebooks/featurestore/aws/sagemaker/aws-sagemaker.ipynb
+++ b/notebooks/featurestore/aws/sagemaker/aws-sagemaker.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "title: \"Sagemaker Example\"\n",
+    "date: 2021-02-24\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# AWS SageMaker and the Hopsworks Feature Store\n",
     "\n",
     "The Hopsworks Feature Store is an open platform that connects to the largest number of data stores, and data science platforms with the most comprehensive API support - Python, Spark (Python, Java/Scala). \n",
@@ -18,6 +30,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Step 1: Configure a Hopsworks API Key\n",
     "\n",
@@ -29,9 +43,7 @@
     "### Step 2: Connect from an Azure Machine Learning Notebook\n",
     "\n",
     "To access the Feature Store from an AWS SageMaker notebook, proceed with the following steps to install the Hopsworks Feature Store client called HSFS:\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -43,16 +55,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Note that we are installing the latest version at the time of writing this (2.1.4) - you should always install the latest minor version that corresponds to the version of your Hopsworks Feature Store. So in this case our Hopsworks instance is running version 2.1.\n",
     "Furthermore, for Python clients (such as AWS SageMaker), it is important to install HSFS with the `[hive]` optional extra. Spark clients do not need this.\n",
     "\n",
     "After successfully installing HSFS, you should be able to connect to the Feature Store from your SageMaker notebook (note: you might need to restart the kernel, if you had HSFS previously installed):"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import hsfs\n",
     "\n",
@@ -62,13 +78,11 @@
     "    api_key_value=\"[api-key]\")\n",
     "\n",
     "fs = connection.get_feature_store()"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Make sure to replace the `[UUID]` with the one of the DNS of your Hopsworks instance, the `[project-name]` with the Hopsworks project that contains your feature store. And the `[api-key]` with the key created in Step 1. Please note that it’s not good practice to store the Api Key in your notebook - instead you should store the key safely in a permissions protected file and use the “api_key_file” argument to pass the filename to the connection method.\n",
     "Once you are connected you can get a handle to the feature store with `connection.get_feature_store()`. If the project you have connected to also contains a shared feature store (it is possible to have a feature store from another project shared with the project you are using), you can also get a handle on the shared feature store using the connection object.\n",
@@ -80,44 +94,42 @@
     "#### Fetch the Feature Group metadata\n",
     "\n",
     "To fetch a feature group from the Feature Store you will first have to fetch its metadata, which is represented by a `FeatureGroup` object:\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "teams = fs.get_feature_group(\"teams_features\", version=1)"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Note: This operation is lazy and doesn't fetch any feature data yet.\n",
     "\n",
     "You can inspect the metadata of the feature group through it's properties:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(teams.name)\n",
     "print(teams.created)"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Read Feature Group into a Pandas DataFrame"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -149,11 +161,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Most operations, such as the `.select()` above, but also `.filter()` and `.join()`, which are performed on a feature group object return a `Query` object. These `Query`s can then be used in further joins or with further filters to create training datasets or to be read into a dataframe."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -192,11 +204,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Or simply select all:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -234,11 +246,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Now we can select the desired features and join them. Note how me make use of the `on` argument for the join only for one of the joins, if no join key is specified, the feature store will use the maximum matching subset of the primary key of both feature groups."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -251,12 +263,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n",
     "Again we can take a look at the resulting dataset to verify:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -333,11 +345,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "To retrieve the training dataset in your training environment you can simply get a handle to the dataset and its location, to pass it subsequently to your reader utilities:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -350,13 +362,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Next Steps\n",
     "\n",
     "Head over to [documentation](https://docs.hopsworks.ai/) and learn more about the capabilities of the HSFS client libraries."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
