--- a/notebooks/featurestore/feature-bias/feature-bias-whatif.ipynb
+++ b/notebooks/featurestore/feature-bias/feature-bias-whatif.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Feature Analysis with What-If-Tool\"\n",
+    "date: 2021-02-24\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "UiNxsd4_q9wq"
    },
@@ -740,5 +752,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
