fix kernels to pyspark
fix kernels to pyspark

--- a/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
+++ b/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
@@ -241,9 +241,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
